--- a/API_EspecieExtionsion/src/main/resources/application-dev.properties
+++ b/API_EspecieExtionsion/src/main/resources/application-dev.properties
@@ -5,3 +5,11 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
+# springdoc
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
+logging.level.org.springdoc=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.sv.edu.udb=DEBUG
