--- a/API_EspecieExtionsion/src/main/resources/application-prod.properties
+++ b/API_EspecieExtionsion/src/main/resources/application-prod.properties
@@ -1,3 +1,17 @@
 spring.application.name=API_EspecieExtionsion
-springdoc.api-docs.enabled=false
-springdoc.swagger-ui.enabled=false
+
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/bio_db
+spring.datasource.username=postgres
+spring.datasource.password=dp17042006
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
+logging.level.org.springdoc=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.sv.edu.udb=DEBUG
